<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="@dimen/layout_width_til"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_til2"
        android:layout_marginEnd="@dimen/marginEnd_til2"
        android:layout_marginBottom="@dimen/marginBottom_til2"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint3"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="@dimen/layout_width_til"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_til2"
        android:layout_marginEnd="@dimen/marginEnd_til2"
        android:layout_marginBottom="@dimen/marginBottom_til"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="@dimen/layout_width_til"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_til2"
        android:layout_marginEnd="@dimen/marginEnd_til2"
        android:layout_marginBottom="@dimen/marginBottom_til"
        app:layout_constraintBottom_toTopOf="@+id/switchTipoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_tv"
        android:layout_marginEnd="@dimen/marginEnd_tv"
        android:text="@string/tv1"
        app:layout_constraintBottom_toBottomOf="@+id/switchTipoUsuario"
        app:layout_constraintEnd_toStartOf="@+id/switchTipoUsuario"
        app:layout_constraintTop_toTopOf="@+id/switchTipoUsuario" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_tv"
        android:layout_marginEnd="@dimen/marginEnd_tv"
        android:text="@string/tv2"
        app:layout_constraintBottom_toBottomOf="@+id/switchTipoUsuario"
        app:layout_constraintStart_toEndOf="@+id/switchTipoUsuario"
        app:layout_constraintTop_toTopOf="@+id/switchTipoUsuario" />

    <Switch
        android:id="@+id/switchTipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_swt"
        android:layout_marginEnd="@dimen/marginEnd_swt"
        android:splitTrack="false"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="@dimen/layout_width_btnEntrar"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_btnEntrar"
        android:layout_marginTop="@dimen/marginTop_btn"
        android:layout_marginEnd="@dimen/marginEnd_btnEntrar"
        android:background="@color/btnCadastro"
        android:onClick="validarCadastroUsuario"
        android:text="@string/btnCadastro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTipoUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>