<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputLayout"
      android:layout_width="@dimen/layout_width_til"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/marginStart_til"
      android:layout_marginEnd="@dimen/marginEnd_til"
      android:layout_marginBottom="@dimen/marginBottom_til"
      app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editLoginSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputLayout2"
      android:layout_width="@dimen/layout_width_til"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/marginStart_til"
      android:layout_marginEnd="@dimen/marginEnd_til"
      android:layout_marginBottom="@dimen/marginBottom_til"
      app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.07999998"
      app:layout_constraintVertical_chainStyle="packed">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btnEntrar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/marginStart_btnEntrar"
      android:layout_marginEnd="@dimen/marginEnd_btnEntrar"
      android:background="@color/btnLogin"
      android:onClick="validarLoginUsuario"
      android:text="@string/btnEntrar"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>