<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PassageiroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_passageiro" />

    <LinearLayout
        android:id="@+id/linearLayoutDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_ll"
        android:layout_marginTop="@dimen/marginTop_ll"
        android:layout_marginEnd="@dimen/marginEnd_ll"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/pad_8dp">

        <EditText
            android:id="@+id/editLocal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:background="@android:color/white"
            android:drawableStart="@drawable/circulo_verde"
            android:drawablePadding="@dimen/drawablePadding_et"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/hint4"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/textSize_et" />

        <EditText
            android:id="@+id/editDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:background="@android:color/white"
            android:drawableStart="@drawable/circulo_verde"
            android:drawablePadding="@dimen/drawablePadding_et"
            android:drawableTint="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/hint5"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/textSize_et" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonChamarUber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_btnChamar"
        android:layout_gravity="bottom"
        android:onClick="chamarUber"
        android:text="@string/btnChamar"
        android:theme="@style/botaoPadrao" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>